fix(atoms/dropdown/menu item): Force text alignment

--- a/packages/core/src/components/atoms/dropdown-menu-item/dropdown-menu-item.component.scss
+++ b/packages/core/src/components/atoms/dropdown-menu-item/dropdown-menu-item.component.scss
@@ -6,7 +6,7 @@
 	@apply cursor-pointer;
 
 	.text-container {
-		@apply block w-full overflow-hidden text-ellipsis whitespace-nowrap;
+		@apply block w-full overflow-hidden text-ellipsis whitespace-nowrap text-start;
 	}
 }
 
